tests/ui/higher-ranked/trait-bounds/normalize-under-binder/norm-before-method-resolution.stderr
error[E0277]: the trait bound `for<'a> <_ as Trait<'a>>::Out: Copy` is not satisfied
  --> $DIR/norm-before-method-resolution.rs:22:17
   |
LL |     let _: () = weird_bound();
   |                 ^^^^^^^^^^^ the trait `for<'a> Copy` is not implemented for `<_ as Trait<'a>>::Out`
   |
note: this is a known limitation of the trait solver that will be lifted in the future
  --> $DIR/norm-before-method-resolution.rs:22:17
   |
LL |     let _: () = weird_bound();
   |                 ^^^^^^^^^^^ try adding turbofish arguments to this expression to specify the types manually, even if it's redundant
note: required by a bound in `weird_bound`
  --> $DIR/norm-before-method-resolution.rs:18:40
   |
LL | fn weird_bound<X>() -> X
   |    ----------- required by a bound in this function
...
LL |         for<'a> <X as Trait<'a>>::Out: Copy
   |                                        ^^^^ required by this bound in `weird_bound`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
